Update and rename beauty.php to beauty.html

--- a/beauty.html
+++ b/beauty.html
@@ -13,7 +13,7 @@
 <body class="animsition">
 <div id="header">
       <div class="left">
-      <p><a href="index.php"><strong>FRED LEVEUGLE</strong> </a><span>BEAUTY PHOTOGRAPHIE</span></p>
+      <p><a href="index.html"><strong>FRED LEVEUGLE</strong> </a><span>BEAUTY PHOTOGRAPHIE</span></p>
    </div>
 
    <div class="right">
