--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="animsition">
    <div id="header">
       <div class="left">
-      <p><a href="index.php"><strong>FRED LEVEUGLE</strong> </a><span>PHOTOGRAPHER DIRECTOR</span></p>
+      <p><a href="index.html"><strong>FRED LEVEUGLE</strong> </a><span>PHOTOGRAPHER DIRECTOR</span></p>
    </div>
 
    <div class="right">
@@ -50,7 +50,7 @@
 
          <div class="category">
             <ul>
-               <li><a href="beauty.php">Beauty</a></li>
+               <li><a href="beauty.html">Beauty</a></li>
                <li><a href="#">Jewellery</a></li>
                <li><a href="#">Advertising</a></li>
             </ul>
